<resources>
    <string name="app_name">Mow</string>
    <string name="mow_app_name">Mow</string>
    <string name="mowtube_app_name">MowTube</string>
    <string name="mowdigest_app_name">Mow Digest</string>

    <string name="app_version">1608142222</string>
    <!--
    we need to update this when data model changes
    update this with
    app/build.gradle ***
    strings.xml ***
    DatabaseHelper.java
    MowActivity.java
    AndroidManifest.xml *** AA_DB_VERSION
    -->

    <string name="add_item_hint">Add a new item...</string>
    <string name="add_button">Add</string>
    <string name="edit_item_title">Edit Item</string>
    <string name="edit_item">Edit Item Below:</string>
    <string name="edit_item_content">TODO</string>
    <string name="edit_item_priority">Priority</string>
    <string name="edit_item_date">Date</string>
    <string name="save_button">Save</string>
    <string name="remove_item_title">Remove Item?</string>
    <string name="remove_item_pos">Yes</string>
    <string name="remove_item_neg">No</string>
    <string name="back_button">Back</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>

    <string name="checkin">Checkin</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="activity_title_launcher">Advanced RecyclerView Examples</string>
    <string name="activity_title_about">Advanced RecyclerView About</string>
    <string name="activity_title_demo_d_minimal">Draggable (Minimal)</string>
    <string name="activity_title_demo_d_basic">Draggable (Basic)</string>
    <string name="activity_title_demo_d_grid">Draggable (Grid Layout)</string>
    <string name="activity_title_demo_d_staggered_grid">Draggable (Staggered Grid Layout)</string>
    <string name="activity_title_demo_d_on_longpress">Drag on Long Press</string>
    <string name="activity_title_demo_d_check_can_drop">Draggable (uses onCheckCanDrop)</string>
    <string name="activity_title_demo_s_minimal">Swipeable (Minimal)</string>
    <string name="activity_title_demo_s_basic">Swipeable (Basic)</string>
    <string name="activity_title_demo_s_on_longpress">Swipe on Long Press</string>
    <string name="activity_title_demo_us">Button under swipeable item</string>
    <string name="activity_title_demo_e_minimal">Expandable (Minimal)</string>
    <string name="activity_title_demo_e_basic">Expandable (Basic)</string>
    <string name="activity_title_demo_ds">Draggable + Swipeable</string>
    <string name="activity_title_demo_eds">Expandable + Draggable + Swipeable</string>
    <string name="activity_title_demo_d_with_section">Draggable with Section</string>
    <string name="activity_title_demo_ed_with_section">Expandable + Draggable with Section</string>
    <string name="activity_title_demo_e_add_remove">Expandable (Add/Remove items)</string>
    <string name="activity_title_demo_e_already_expanded">Expandable (Groups already expanded)</string>
    <string name="activity_title_demo_s_vertical">Swipeable (Vertical)</string>
    <string name="activity_title_demo_s_viewpager">Swipeable with ViewPager</string>
    <string name="snack_bar_text_item_removed">Item was removed!</string>
    <string name="snack_bar_text_group_item_removed">1 group item removed</string>
    <string name="snack_bar_text_child_item_removed">1 child item removed</string>
    <string name="snack_bar_text_button_clicked">Button clicked! (position = %1$d)</string>
    <string name="snack_bar_action_undo">UNDO</string>
    <string name="dialog_message_item_pinned">Item pinned! (position = %1$d)</string>
    <string name="dialog_message_group_item_pinned">Group item pinned! (group = %1$d)</string>
    <string name="dialog_message_child_item_pinned">Child item pinned! (group = %1$d, child = %2$d)</string>
    <string name="menu_item_about">About</string>

    <string name="loading_msg">Loading...</string>
    <string name="home">Home</string>
    <string name="trending">Trending</string>
    <string name="upcoming">Upcoming</string>
    <string name="favorite">Favorite</string>
    <string name="autoplay">Auto-play</string>
    <string name="on_wifi_only">on Wi-Fi only</string>
    <string name="on_popular">on popular movies</string>
    <string name="autoplay_always">always</string>

    <string name="training">Training</string>
    <string name="digest">Digest</string>
    <string name="explore">Explore</string>
    <string name="signalStrength">Signal strength</string>
    <string name="excellent">Excellent</string>
    <string name="ssid">SSID</string>
    <string name="ssidLit">Material Dialogs</string>
    <string name="powered_by">Powered by</string>
    <string name="nyt_api">New York Times APIs</string>
    <string name="category">Category</string>
    <string name="art_section">Arts</string>
    <string name="sort">Sort by</string>
    <string name="date_range">Date Range</string>
    <string name="pick_date_range">Pick</string>
    <string name="style_section">Style</string>
    <string name="sports_section">Sports</string>
    <string name="books_section">Books</string>
    <string name="business_section">Business</string>
    <string name="crosswords_section">Crosswords</string>
    <string name="food_section">Food</string>
    <string name="health_section">Health</string>
    <string name="magazine_section">Magazine</string>
    <string name="multimedia_section">Multimedia</string>
    <string name="movies_section">Movies</string>
    <string name="opinion_section">Opinion</string>
    <string name="science_section">Science</string>
    <string name="technology_section">Technology</string>
    <string name="upshot_section">Upshot</string>
    <string name="travel_section">Travel</string>
    <string name="us_section">U.S.</string>
    <string name="world_section">World</string>
    <string name="money_section">Money</string>
    <string name="fake_content">Hes going to be 39 years old on July 28, but he was always leaning towards returning for the 2016-17 season. Ginobili is an unrestricted free agent, but its still very tough to imagine him leaving the Spurs. Regardless, Ginobili will likely have a limited role next season and wont be worth drafting in most formats. In 58 appearances last season, he averaged 9.6 points, 3.1 assists, 2.5 boards, 1.1 steals and 1.2 treys.</string>
    <string name="contentDescription">loading...</string>
    <string name="fake_title">Manu Ginobili explains why he nearly left San Antonio this offseason</string>
    <string name="fake_title_space">s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s s</string>
    <string name="fake_section">The Upshot</string>
    <string name="fake_date">2016-07-30</string>

    <string name="mowtweebook_app_name">Mow Tweebook</string>
    <string name="profile">Profile</string>
    <string name="fake_name">Demi Lovato</string>
    <string name="fake_id">\@ddlovato</string>
    <string name="fake_relative_date">8h</string>
    <string name="no_internet">Cannot retrieve messages at this time. Please try again later.</string>
    <string name="change_location">Change location</string>
    <string name="clear_data">Clear Offline Data</string>
    <string name="change">Change</string>
    <string name="change_location_title">Trends tailored just for you</string>
    <string name="change_location_content">Trends offer a unique way to get closer to what you care about. They are tailored for you based on your location and who you follow.</string>
    <string name="mention">Mention</string>
    <string name="fake_description">Magic, Like the Wind</string>

</resources>
