<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="8dp"
    android:layout_marginTop="12dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            tools:src="@drawable/coffee_23"
            />

        <TextView
            android:id="@+id/card_title"
            android:layout_below="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColor="@color/mowtubeColorDateDarkDark"
            android:text="@string/fake_title"
            tools:text="@string/fake_title"
            />

        <LinearLayout
            android:layout_below="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum = "2"
            >
            <TextView
                android:id="@+id/card_section"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textSize="12sp"
                android:paddingTop="4dp"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingStart="16dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:textColor="@color/mowtubeColorDate"
                android:text="@string/fake_section"
                tools:text="@string/fake_section"
            />
            <TextView
                android:id="@+id/card_published_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:gravity="end"
                android:textSize="12sp"
                android:paddingTop="4dp"
                android:paddingBottom="16dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/mowtubeColorDate"
                android:text="@string/fake_date"
                tools:text="@string/fake_date"
                />

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>