<?xml version="1.0" encoding="utf-8"?>
<com.example.chinyao.mow.mowdigest.detail.NotifyingScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <ImageView
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:src="@drawable/p1"
            android:id="@+id/cover_img"
            android:contentDescription="@string/contentDescription"
            />
        <com.example.chinyao.mow.mowdigest.detail.SharpRectView
            android:id="@+id/sharp_rect"
            android:layout_below="@id/cover_img"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginTop="-120dp"
            />
        <TextView
            android:id="@+id/section"
            android:layout_alignTop="@id/sharp_rect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_section"
            tools:text="@string/fake_section"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="9dp"
            android:layout_marginStart="9dp"
            android:textSize="24sp"
            android:textColor="@color/mowdigestColorAccent"
            android:padding="6dp"
            />
        <TextView
            android:id="@+id/title"
            android:layout_alignLeft="@id/section"
            android:layout_alignStart="@id/section"
            android:layout_below="@id/section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_title"
            tools:text="@string/fake_title"
            android:layout_marginTop="8dp"
            android:textSize="28sp"
            android:padding="6dp"
            android:textColor="@color/mowtubeColorDateDarkDark"
            />
        <TextView
            android:id="@+id/content_text"
            android:layout_alignLeft="@id/title"
            android:layout_alignStart="@id/title"
            android:layout_below="@id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorm_ipsum"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:lineSpacingExtra="2dp"
            android:padding="6dp"
            />
        <TextView
            android:layout_below="@id/content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/title"
            android:layout_alignStart="@id/title"
            android:textSize="16sp"
            android:text="@string/lorm_ipsum"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="6dp"
            />
    </RelativeLayout>
</com.example.chinyao.mow.mowdigest.detail.NotifyingScrollView>